fix: Prevent carousel from overflowing.

--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -75,7 +75,7 @@ $carousel-caption-spacer: 2rem;
 $carousel-caption-width: 100%;
 $carousel-indicator-height: 5px;
 $carousel-indicator-width: 20px;
-$display-fot-weight: 400;
+$display-font-weight: 400;
 $font-family-base: "Inter", arial, sans-serif;
 $font-size-base: 0.875rem;
 $font-size-root: 16px;
